@@ -1,3 +1,8 @@
+2008-10-26  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* bin/srvderive.in: new utility that combines several services
+	and combines them as MAX or SUM
+
 2008-09-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* Added safe signal handlers to all components. Also Apache handlers
